# waveAnalysis

./: .gitattributes  .gitignore  README 2.md  README.md  __main__.py  environment 2.yml  environment.yml  guiTesting.py  polDepol_interactive.py  pyproject.toml  requirements.txt  signal-processing_ani.py  signalProcessing1C_rolling.py  signalProcessing2C.py  testing.py  tox.ini  waveanalysis.py
.github/workflows/: CI.yml
1-channel_rolling/: README.md  signalProcessing1C_rolling.py
2-channel/: README.md  custom_gui.py  methods.py  moretesting.py  signalProcessing2C.py  signal_processing_class.py  testing.ipynb  testing.py  waveanalysis.py
2-channel/testDatasets/: 1_Group2.tif  1_Group3.tif  2_Group3.tif  3_Group1.tif  3_Group2.tif  3_Group3.tif
assemblyDisassembly_plots/: README.md  polDepol_interactive.py
env/: pyvenv.cfg
scripts/: watch.sh
test_data_rolling/: test1.tif
tests/: test.ipynb
tests/standard/: 1_Group1.tif
tests/test_data_workflows/: test_group_kymo.py  test_group_standard.py  test_kymo.py  test_kymo_groups.py  test_kymo_workflow.py  test_rolling.py  test_rolling_workflow.py  test_single.py  test_standard.py  test_standard_group.py  test_standard_workflow.py
tests/test_figures/: test_indv_peak_prop_fig.py
tests/test_image_properties/: test_image_get_image_properties.py
tests/test_image_props/: test_kymo_bin_calc.py  test_kymo_image_creation.py  test_kymo_image_props.py  test_standard_bin_calc.py  test_standard_rolling_image_creation.py  test_standard_rolling_image_props.py
tests/test_plotting/: test_summ_ACF_plots.py
waveanalysis/: __init__.py  __main__.py  _main_ 2.py  setup.py
waveanalysismods/: customgui.py  processor.py  rollingprocessor.py
(+125 files in other folders)
