[tool.poetry]
name = "waveanalysis"
version = "0.1.0"
description = "imaging processing of oscillatory dynamics"
authors = ["Zac Swider <zswider@wisc.edu>"]
readme = "README.md"
packages = [{include = "waveanalysis"}]

[tool.poetry.dependencies]
python = ">=3.8"
scipy = "1.10.1"
numpy = "1.25.0"
tifffile = "2021.7.2"
matplotlib = "3.7.1"
pandas = "1.5.3"
tqdm = "4.65.0"
seaborn = "0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
